# mcp_services

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  env.example
services/tourism/: .pre-commit-config.yaml  Dockerfile  README.ko.md  pyproject.toml  requirements.txt  smithery.yaml
services/tourism/src/mcp_tourism/: api_client.py  server.py
services/tourism/tests/: conftest.py  test_api_client.py  test_integration.py  test_server.py  test_transport.py
services/weather/: Dockerfile  korea_weather.py  pyproject.toml
