[project]
name = "mcp-korea-tourism-api"
version = "0.1.2"
authors = [
    { name = "Harim Kang", email = "harimkang4422@gmail.com" },
]
description = "MCP Server for Korea Tourism API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "cachetools>=5.5.2",
    "fastmcp==2.9.0",
    "httpx>=0.28.1",
    "ratelimit>=2.2.1",
    "tenacity>=9.1.2",
]

[project.urls]
Repository = "https://github.com/harimkang/mcp-korea-tourism-api"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tourism"]
